# Engasjement-SVV

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  temp.py
notebooks/: 01 check if correct csv file for axle load distribution.ipynb  02 axle load distribution plotting.ipynb  03 axle load w N200.ipynb  04 axle load w N200 and esal.ipynb  05 visualize total vehicle weight data.ipynb  06 74t weight data.ipynb  07 road wear indicators EDA raw files.ipynb  08 4.1.3 road wear indicators.ipynb  09 tables estimated passby.ipynb  10 estimated registrations.ipynb  11 estimated registrations plotting.ipynb  12 coordinates bridges.ipynb  13 merge dfs.ipynb  14 percentage bwim74t.ipynb  14 percentage bwim7t.ipynb  15 tangensvingen.ipynb  16 tangensvingen.ipynb  17 bwim registrations.ipynb  18 hypotheses heavy haul 6,7,8.ipynb  18 hypotheses heavy haul 6,7,8.md  18 hypotheses heavy haul.md  19 hypothesis heavy haul 10.ipynb  20 hypothesis heavy haul 11,44,45.ipynb  20 hypothesis heavy haul 11,44,45.md  21 validation of 74t vehicle weights.ipynb  23 sumary kdes.ipynb  23 summary weight.ipynb  bridges_map.html  map_with_buffer.html
reports/: Illustrasjoner-til-supplerende-analyser.tex
reports/axle_load_w_N200_and_esal/: Illustrasjoner-til-supplerende-analyser-Aksellastfordelinger.tex  Illustrasjoner-til-supplerende-analyser.tex
reports/section_6-1/: main.ipynb
source/: __init__.py  config.py  dataset.py  features.py  plots.py  report.py  utils.py
testing/: test_estimated_registrations.py  test_road_wear_indicators.py  test_tonnage_trimming.py
(+47 files in other folders)
