[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "source"
version = "0.0.1"
description = "Engasjement h\u00f8st/24/v\u00e5r25 hos SVV"
authors = [
  { name = "Anders V. Stubberud" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/ 
'''

[tool.ruff]
select = ["E", "F", "W", "C", "I", "B"]
fix = true

[tool.ruff.lint.isort]
known-first-party = ["source"]
force-sort-within-sections = true

[tool.autoflake]
remove-all-unused-imports = true
in-place = true
recursive = true

[tool.isort]
profile = "black"
force_single_line = true
